tests/dataset/tpc-ds/compiler/c/q60.error
/tmp/TestCCompiler_TPCDS_Goldenq601826285068/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq601826285068/001/prog.c:180:19: warning: initialization of ‘int’ from ‘store_sale_t *’ makes integer from pointer without a cast [-Wint-conversion]
  180 |   int all_sales = store_sales union catalog_sales union web_sales;
      |                   ^~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq601826285068/001/prog.c:180:31: error: expected ‘,’ or ‘;’ before ‘union’
  180 |   int all_sales = store_sales union catalog_sales union web_sales;
      |                               ^~~~~
/tmp/TestCCompiler_TPCDS_Goldenq601826285068/001/prog.c:181:28: error: incompatible type for argument 1 of ‘_sum_int’
  181 |   double result = _sum_int(0);
      |                            ^
      |                            |
      |                            int
/tmp/TestCCompiler_TPCDS_Goldenq601826285068/001/prog.c:62:30: note: expected ‘list_int’ but argument is of type ‘int’
   62 | static int _sum_int(list_int v) {
      |                     ~~~~~~~~~^
